<resources>
    <string name="app_name">ShortNews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_image">News Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="news_image_details">News image</string>
    <string name="news_posted">Yesterday</string>
    <string name="news_details_title">News Title</string>
    <string name="headline_title">Headlines</string>
    <string name="business_title">Business</string>
    <string name="sports_title">Sports</string>
    <string name="navigation_header">Navigation header</string>


    <string name="education_title">Education</string>
    <string name="education_key">education</string>
    <string name="business_key">business</string>
    <string name="local_news_title">Local News</string>
    <string name="local_news_key">local</string>
    <string name="hyderabad_title">Hyderabad</string>
    <string name="hyderabad_key">hyderabad</string>
    <string name="tollywood_title">Tollywood</string>
    <string name="tollywood_key">tollywood</string>
    <string name="health_title">Health</string>
    <string name="health_key">health</string>

    <string name="default_value">false</string>
</resources>
